--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair:ital,wght@0,500;0,700;1,300&display=swap"
       rel="stylesheet"
     />
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <title>Travel Planner</title>
+    <link rel="shortcut icon" type="image/png" href="../img/logo.png" />
   </head>
   <body>
     <header>
