--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -11,9 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Playfair:ital,wght@0,500;0,700;1,300&display=swap"
       rel="stylesheet"
     />
-    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+    <!-- <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    /> -->
     <title>Travel Planner</title>
-    <link rel="shortcut icon" type="image/png" href="../img/logo.png" />
   </head>
   <body>
     <header>
